# YojanaMitra-AI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  verify-deployment.sh
.github/workflows/: code-quality.yml  dependency-scan.yml  deploy-to-server.yml  deploy.app.yml  devsecops-pipeline.yml  docker-build-push.yml  dockerfile-scan.yml  image-scan.yml  python-matrix.yml
backend/api-gateway/: requirements.txt
backend/api-gateway/app/: auth.py  main.py  proxy.py  settings.py
devops/dockerfiles/: api-gateway.Dockerfile  chatbot-service.Dockerfile  eligibility-service.Dockerfile  frontend.Dockerfile  notification-service.Dockerfile  scheme-service.Dockerfile  user-service.Dockerfile
devops/kubernetes/: README.md  api-gateway.yaml  ingress.yaml  namespace.yaml  notification-service.yaml  secrets.example.yaml  services.yaml
docs/: architecture.md  schemes.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  SchemeCard.tsx  ThemeProvider.tsx
services/_shared/: pyproject.toml
services/_shared/src/ym_shared/: config.py  db.py  http.py  security.py
services/_shared/src/ym_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/chatbot-service/: requirements.txt
services/eligibility-service/: requirements.txt
services/user-service/: requirements.txt
(+43 files in other folders)
